# GameLauncher

./: README.md
ConfigEditor/: app.rc  app.res  build.bat  main.cpp
GameLauncherMain/: CMakeLists.txt  appicon.rc
GameLauncherMain/resources/: resources.qrc
GameLauncherMain/src/: animatedwidget.h  backgroundwidget.cpp  detailpanel.cpp  detailpanel.h  gamecard.h  gamemanager.cpp  gamemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  orderdialog.cpp  orderdialog.h  pathmanagerdialog.cpp  pathmanagerdialog.h  setupdialog.cpp  setupdialog.h
GameVault-build/GameVault/: CMakeLists.txt  appicon.rc
GameVault-build/GameVault/src/: animatedwidget.cpp  backgroundwidget.h  executabledialog.cpp  executabledialog.h  gamecard.cpp  gamemanager.cpp  mainwindow.cpp
GameVault-build/Infoconfig/: app.rc  app.res  main.cpp
